fixing some scrollbar issues that appear in Firefox

--- a/lot/landmapper/static/landmapper/css/base.css
+++ b/lot/landmapper/static/landmapper/css/base.css
@@ -71,6 +71,7 @@ body {
   line-height: var(--body-line-height);
   letter-spacing: var(--body-letter-spacing);
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 /**
